# azb-manager

./: README.md  pyproject.toml
src/azb_client/: AzureBlobStorageClient.py
src/azb_manager/: __init__.py  azb_manager.py
tests/: config.py  global_vars.py  test_container_manager.py  test_storage_account_manager.py
tests/uploads/: mock.csv  mock.json
